[package]
name = "zig-issue-bot"
version = "0.1.0"
authors = ["Haze Booth <isnt@haze.cool>"]
edition = "2018"

[dependencies]
regex = "1.3.7"
surf = "2.0.0-alpha.2"
scraper = "0.12.0"
futures = "0.3.4"
dotenv = "0.15.0"

[dependencies.tokio]
version = "0.2.20"
features = ["macros", "sync", "fs", "rt-threaded", "process"]

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
default-features = false
features = ["builder", "cache", "client", "http", "gateway", "native_tls_backend", "model", "absolute_ratelimits"]
